2011-11-10  Sergio Martin <sergio.martin@artica.es>

	* include/styles/integria.css
	images/footerbg.gif: Fixed footer layout

2011-11-10  Sergio Martin <sergio.martin@artica.es>

	* godmode/usuarios/lista_usuarios.php: Fixed username problem
	with spaces with safe input function for bug 3426283

2011-11-08  Miguel de Dios  <miguel.dedios@artica.es>
	
	* include/functions_db.mysql.php: added function "clean_cache_db".
	
	* include/functions_update_manager.php,
	include/update_manager/sql/update_manager.sql,
	godmode/updatemanager/settings.php, godmode/updatemanager/main.php: first
	stable version of update manager in Integria.
	
	* operation/projects/people_manager.php: erased trace.
	
	* operation/side_menu.php: renabled the update manager in setup menu.
	
	* godmode/updatemanager/lang, godmode/updatemanager/load_updatemanager.php,
	godmode/updatemanager/lib: removed the old version of update manager.

2011-11-08  Sergio Martin <sergio.martin@artica.es>

	* include/functions_db.php
	operation/incidents/incident_report.php: Improved 
	incident report with description and active users

	* operation/projects/project_overview.php
	images/last_closed.png
	images/first_closed.png
	images/branch.png
	images/closed.png: Improved project overview with browsable
	tree style

2011-11-07  Vanessa Gil <vgil@artica.es>

	* godmode/grupos/configurar_grupo.php
	godmode/grupos/lista_grupos.php
	operation/incidents/incident.php
	operation/incidents/incident_detail.php
	operation/projects/project.php
	operation/projects/project_detail.php: fixed errors of edition.
	
2011-11-07  Sergio Martin <sergio.martin@artica.es>

	* include/js/integria_incident_search.js
	operation/incidents/incident_report.php
	operation/side_menu.php: Added the first version of the 
	incident report for bug 3433583

	* include/functions_db.php: Deleted incident tracking
	when delete an incident to fix foreing key error

2011-11-07  Miguel de Dios  <miguel.dedios@artica.es>
	